2-Envoy-kubenetes-101/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  # Adding new entries here will make them appear as files in the deployment.
  # Please update k8s.io/k8s.io/README.md when you update this file
  envoy.yaml: |
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address: { address: 0.0.0.0, port_value: 8001 }
    stats_flush_interval:
      seconds: 5
    static_resources:
      listeners:
      - name: envoy_101_listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 8080 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: HTTP1
              stat_prefix: envoy_101
              server_name: envoy_101
              route_config:
                name: local_app_route
                virtual_hosts:
                - name: local_app
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: local }
              http_filters:
              - name: envoy.router
      clusters:
      - name: local
        type: STATIC
        connect_timeout: 10s
        lb_policy: ROUND_ROBIN
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 9090
            protocol: TCP
